# NoSQLplusplus

./: .gitignore  List.cpp  List.h  README.md  Redis.cpp  Redis.h  main.cpp  tutorial.md
doc/html/: _2_users_2rohitlunavara_2_work_2_semester_012_2_c_09_09_2_v_c__project_2src_2core_2_data_base__string_8h-example.html  _data_base_8h_source.html  _data_base___errors_8h_source.html  _data_base___geo_coordinate_8h_source.html  _data_base___list_8cpp_source.html  _data_base___list_8h_source.html  _data_base___string_8cpp_source.html  _data_base___string_8h_source.html  _geo_coordinate_8cpp_source.html  _geo_coordinate_8h_source.html  _hash_table_8h_source.html  _spherical_r_tree_8h_source.html  annotated.html  class_data_base-members.html  class_data_base.html  class_data_base_3_01std_1_1string_00_01_geography_1_1_geo_coordinate_01_4-members.html  class_data_base_3_01std_1_1string_00_01_geography_1_1_geo_coordinate_01_4.html  class_data_base_3_01std_1_1string_00_01std_1_1deque_3_01std_1_1string_01_4_01_4-members.html  class_data_base_3_01std_1_1string_00_01std_1_1deque_3_01std_1_1string_01_4_01_4.html  class_data_base_3_01std_1_1string_00_01std_1_1string_01_4-members.html  files.html  (+21 more)
src/: CMakeLists.txt  Doxyfile  book.txt  output.txt  uscities.txt
src/core/: BTree.h  Client.h  DataBase.h  DataBase_Errors.h  DataBase_GeoCoordinate.h  DataBase_List.cpp  DataBase_List.cpp.orig  DataBase_List.cpp.orig2  DataBase_List.h  DataBase_String.cpp  DataBase_String.h  DataBase_string.h  Database_String.cpp  Database_String.h  GeoCoordinate.cpp  GeoCoordinate.h  HashClient.h  HashTable.h  RTree.h  Redis.cpp  Redis.h  SphericalRTree.h
src/rtree/: RTree.h
src/tests/: CMakeLists.txt  ListTest2.cpp  ListTests.cpp  main.cpp  measurement_string_append.cpp  measurement_string_get.cpp  measurement_string_mget.cpp  measurement_string_remove.cpp  test1_string.cpp  test2.cpp  test2_string.cpp  test_geo.cpp  test_rtree.cpp  test_rtree.cpp.orig
(+42 files in other folders)
